--- a/sass/components/_tittle.scss
+++ b/sass/components/_tittle.scss
@@ -1,4 +1,5 @@
-.title-section__title {
+.title-section {
+    &__title {
     max-width: 696px;
     font-weight: 900;
     font-size: 44px;
@@ -8,4 +9,19 @@
     letter-spacing: 0.06em;
     margin-bottom: 30px;
     text-transform: uppercase;
+    }
+    &__title-button {
+        width: 200px;
+        height: 50px;
+        font-weight: 700;
+        line-height: 1.87;
+        letter-spacing: 0.06em;
+        color: #FFFFFF;
+        background: var(--logo-color);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+        border: none;
+        align-items: center;
+        justify-content: center;
+    }
 }
