--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,10 +6,8 @@
 @import "./components/backdrop";
 @import "./components/modal";
 @import "./components/logo";
-@import "./components/btn";
-@import "./components/tittle-btn";
+@import "./components/navigation";
 @import "./components/portfolio-btn";
-@import "./components/link-contact";
 @import "./components/tittle";
 @import "./components/portfolio-card";
 @import "./components/overlay";
@@ -17,9 +15,7 @@
 @import "./components/images-label";
 @import "./components/team-card";
 @import "./components/social-list-link";
-@import "./components/client-icon";
-@import "./components/footer-social-links";
-@import "./components/adress";
+@import "./components/clients";
 @import "./components/newsletter";
 
 @import "./layout/header";
