--- a/sass/components/_advantages-element.scss
+++ b/sass/components/_advantages-element.scss
@@ -1,33 +1,38 @@
-.advantages__img {
-    display: flex;
-    justify-content: center;
-    padding: 25px 0;
-    background-color: rgba(245, 244, 250, 1);
-    border-radius: 4%;
-    height: 120px;
-    margin-bottom: 30px;
+/*icon*/
+.advantages {
+    &__img {
+        display: flex;
+        justify-content: center;
+        padding: 25px 0;
+        background-color: var(--bg-icon-team);
+        border-radius: 4%;
+        height: 120px;
+        margin-bottom: 30px;
+    }
+
+    &__icon {
+        width: 70px;
+        height: 70px;
+        align-items: center;
+    }
+    
+}   
+
+/*text*/ 
+.advantages{
+    &__tittle {
+        font-size: 14px;
+        line-height: 1.17;
+        margin-bottom: 10px;
+        text-transform: uppercase;
+    }
+
+    &__text {
+        font-size: 14px;
+        line-height: 24px;
+        color: var(--link-color);
+        text-align: left;
+        vertical-align: top;
+    }
 }
 
-/*nagłówek tekstu*/ 
-.advantages__tittle {
-    font-size: 14px;
-    line-height: 1.17;
-    margin-bottom: 10px;
-    text-transform: uppercase;
-}
-
-.advantages__text {
-    /*width: 270px; 
-    height: 75px;*/
-    font-size: 14px;
-    line-height: 24px;
-    color: var(--link-color);
-    text-align: left;
-    vertical-align: top;
-}
-
-.advantages__icon {
-    width: 70px;
-    height: 70px;
-    align-items: center;
-}
