--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -11,6 +11,50 @@
     transition-property: transform, scale, opacity;
     transform: translate(-50%, -50%);
 
+    &__tittle {
+        /* Zostaw swoje dane w formularzu poniżej */
+        position: absolute;
+        width: 448px;
+        height: 23px;
+        left: 40px;
+        top: 40px;
+    
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 23px;
+        text-align: center;
+        letter-spacing: 0.03em;
+    
+        color: #212121;
+    }
+    
+    &__close-btn {
+        /* close */
+        width: 30px;
+        height: 30px;
+        position: absolute;
+        left: 490px;
+        top: 8px;
+        background-color: #FFFFFF;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        border-radius: 50%;
+        font-size: 15px;
+        display: block;
+        justify-items: center;
+    }
+
+    &__icon {
+        width: 18px;
+        height: 18px;
+        position: relative;
+        left: 12px;
+        bottom: 28px;
+        transition-property: border, fill;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    }
 }
 
 @keyframes modalmove {
@@ -30,41 +74,6 @@
     }
 }
 
-.modal__close-btn {
-    /* close */
-    width: 30px;
-    height: 30px;
-    position: absolute;
-    left: 490px;
-    top: 8px;
-    background-color: #FFFFFF;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 50%;
-    font-size: 15px;
-    display: block;
-    justify-items: center;
-
-}
-
-.modal__tittle {
-    /* Zostaw swoje dane w formularzu poniżej */
-
-    position: absolute;
-    width: 448px;
-    height: 23px;
-    left: 40px;
-    top: 40px;
-
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 23px;
-    text-align: center;
-    letter-spacing: 0.03em;
-
-    color: #212121;
-}
 
 .modal-inputs {
     /* Inputs */
@@ -74,65 +83,53 @@
     left: 40px;
     top: 75px;
     
+    &__label {
+        display: flex;
+        flex-direction: column;
+        color: #757575;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 14px;
+        letter-spacing: 0.01em;
+        margin-top: 0;
+        
+        &:nth-child(4) {
+            height: 120px;
+        }
+        
+        &:focus-within {
+            fill: #2196F3;
+            /*color: var(--main-color);*/
+        }
+    }
+
+    &__input,
+    &__textarea {
+        color: rgba(117, 117, 117, 0.5);
+        padding: 12px 42px;
+        border: 1px solid rgba(33, 33, 33, 0.2);
+        border-radius: 4px;
+        margin-top: 4px;
+        transition-property: color, border, fill;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+        &:focus {
+            border: 1px solid var(--logo-color);
+            fill: #2196F3;
+            outline: none;
+            color: #000000;
+        }
+    }   
 }
 
-.modal-inputs__label {
-    display: flex;
-    flex-direction: column;
-    color: #757575;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 14px;
-    letter-spacing: 0.01em;
-    margin-top: 0;
-    
-    &:nth-child(4) {
-        height: 120px;
-    }
-    
-    &:focus-within {
-        fill: #2196F3;
-        color: var(--main-color);
-    }
-}
-
-.modal-inputs__input,
-.modal-inputs__textarea {
-    color: rgba(117, 117, 117, 0.5);
-    padding: 12px 42px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    margin-top: 4px;
-    transition-property: color, border, fill;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:focus {
-        border: 1px solid var(--logo-color);
-        fill: #2196F3;
-        outline: none;
-        color: #000000;
-    }
-}
-
-.modal-inputs__textarea {
+.modal-inputs__textarea--position {
     resize: none;
     text-align: left;
     height: 120px;
     padding-left: 16px;
-
 }
 
-.modal__icon {
-    width: 18px;
-    height: 18px;
-    position: relative;
-    left: 12px;
-    bottom: 28px;
-    transition-property: border, fill;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
 .checkbox {
     display: flex;
     flex-direction: column;
@@ -144,28 +141,29 @@
     margin-top: 0;
     justify-content: center;
     align-items: center;
-}
 
-.checkbox__link {
-    text-decoration: underline;
-    color: var(--logo-color);
-}
 
-.checkbox__text {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
+    &__link {
+        text-decoration: underline;
+        color: var(--logo-color);
+    }
 
-    &::before {
-        content: "";
-        display: inline-block;
-        width: 16px;
-        height: 16px;
-        outline: 1px solid var(--main-color);
-        border-radius: 2px;
-        border: none;
-        margin-right: 5px;
+    &__text {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
+
+        &::before {
+            content: "";
+            display: inline-block;
+            width: 16px;
+            height: 16px;
+            outline: 1px solid var(--main-color);
+            border-radius: 2px;
+            border: none;
+            margin-right: 5px;
+        }
     }
 }
 
@@ -179,13 +177,13 @@
     outline: var(--logo-color);
 
 }
-.submit-button {
+.modal-button {
     width: 200px;
     height: 50px;
 
-    background: #2196F3;
+    background: var(--logo-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border: #2196F3 solid;
+    border: var(--logo-color) solid;
     border-radius: 4px;
 
     font-weight: 700;
@@ -195,9 +193,7 @@
     align-items: center;
     text-align: center;
     letter-spacing: 0.06em;
-    color: #FFFFFF;
-    justify-items: center;
-    align-items: center;
+    color: var(--light-logo-color);
     margin: 30px auto 40px;
 }
 
