--- a/sass/components/_portfolio-btn.scss
+++ b/sass/components/_portfolio-btn.scss
@@ -1,9 +1,3 @@
-.portfolio-buttons--container {
-    display: flex;
-    justify-content: center;
-    padding-top: 94px;
-    padding-bottom: 50px;
-}
 .portfolio-buttons-list {
     list-style: none;
     padding: 0;
@@ -11,27 +5,29 @@
     justify-content: space-between;
     display: flex;
 }
-.portfolio-buttons__item:not(:last-child) {
-    padding-right: 8px;
-}
-.portfolio-buttons__button {
-    padding: 6px 22px;
-    background: #F5F4FA;
-    border-radius: 4px;
-    font-weight: 500;
-    line-height: 1.875;
-    letter-spacing: 0.03em;
-    border: none;
-    transition-property: background-color, color, box-shadow;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:hover,
-    &:focus,
-    &:active {
-        background-color: var(--logo-color);
-        color: #FFFFFF;
-        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+.portfolio-buttons {
+    &__item:not(:last-child) {
+        padding-right: 8px;
+    }
+    &__button {
+        padding: 6px 22px;
+        background: #F5F4FA;
         border-radius: 4px;
+        font-weight: 500;
+        line-height: 1.875;
+        letter-spacing: 0.03em;
+        border: none;
+        transition-property: background-color, color, box-shadow;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+        &:hover,
+        &:focus,
+        &:active {
+            background-color: var(--logo-color);
+            color: #FFFFFF;
+            box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+            border-radius: 4px;
+        }
     }
 }
