--- a/sass/components/_social-list-link.scss
+++ b/sass/components/_social-list-link.scss
@@ -1,45 +1,64 @@
 .social-list {
-    list-style: none;
     display: flex;
     justify-content: center;
     text-decoration: none;
+    list-style: none;
     padding-bottom: 42px;
-}
-.social-list__item {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.17;
-    letter-spacing: .02em;
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.social-list__link {
-    width: 44px;
-    height: 44px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    background-color: #FFFFFF;
-    color: var(--link-color1);
-    margin-right: 10px;
-    transition-property: background-color, color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    margin: 0;
+    padding-left: 0;
 
-    &:hover,
-    &:focus {
-        background-color: #2196F3;
-        color: #FFFFFF;
+    &__item {
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.17;
+        letter-spacing: .02em;
+    }
+
+    &__link {
+        width: 44px;
+        height: 44px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        background-color: #FFFFFF;
+        fill: var(--link-color1);
+        margin-right: 10px;
+        transition-property: background-color;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+        &:hover,
+        &:focus {
+            background-color: #2196F3;
+            color: #FFFFFF;
+            fill: currentColor;
+        }
+    }
+
+    &__icon {
+        width: 20px;
+        height: 20px;
+        display: flex;
+        color: currentColor;
+        justify-content: center;
+        align-items: center;
     }
 }
-
-.social-list__icon {
-    width: 20px;
-    height: 20px;
-    display: flex;
-    color: currentColor;
-    justify-content: center;
-    align-items: center;
+/*footer modifikator*/
+.social-list--footer {
+    justify-content: space-between;
+    padding: 0;
+    margin: 0;
+}
+.social-list__item--footer {
+    margin-right: 10px;
+}
+.social-list__link--footer {
+    color: #FFFFFF;
+    background-color: rgba(255, 255, 255, 0.1);
+    margin-right: 0;
+}
+.social-list__icon--footer {
+    fill:var(--light-logo-color);
 }
