--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -5,15 +5,17 @@
     padding: 94px 0;
     justify-content: space-between;
     margin: 0;
-}
-.advantages-list {
-    display: flex;
-    justify-content: space-between;
-    margin-left: -10px;
-    list-style: none;
-}
-.advantages__item {
-    align-items: center;
-    justify-content:space-between;
-    max-width: 270px;
+
+    &__list {
+        display: flex;
+        justify-content: space-between;
+        margin-left: -10px;
+        list-style: none;
+    }
+
+    &__item {
+        align-items: center;
+        justify-content:space-between;
+        max-width: 270px;
+    }
 }
