--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -5,35 +5,49 @@
     line-height: 1.71;
     color: #FFFFFF;
     background: var(--bg-color);
-    letter-spacing: 0.03em;
+    letter-spacing: 0.03em;   
 }
 
 .footer-flex {
     display: flex;
     padding-bottom: 60px;
 }
-.footer-aside--container {
+.footer-aside {
     padding-top: 60px;
     padding-right: 70px; 
 }
-.footer-adress--container {
+.footer-adress {
     margin-top: 20px;
-}
-.footer-adress__item {
-    font-style: normal;
-    align-items: stretch;
-    padding-bottom: 9px;
+
+        &__item {
+        font-style: normal;
+        align-items: stretch;
+        padding-bottom: 9px;
+        }
+
+        &__link {
+        color: var(--link-color);
+        text-decoration: none;
+        }
 }
 
-.footer-adress__link {
-    color: var(--link-color);
-    text-decoration: none;
-}
 .footer-social-links {
     display: flex;
     align-items: baseline;
     justify-content: baseline;
     flex-direction: column;
+    
+    &__tittle {
+        font-style: normal;
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 16px;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        text-align: left;
+        padding: 72px 0 20px;
+        color: #FFFFFF;
+    }
 }
 .newsletter-flex {
     display: flex;
