--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,88 +1,48 @@
-.page-header--container {
-    display: flex;
-    justify-content: space-between;
-}
 
 .page-header {
     border-bottom: 1px solid #ECECEC;
 }
-.navigation {
-    display: flex;
-    padding-top: 32px;
-    padding-bottom: 32px;
-}
-.list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    justify-content: space-between;
-}        
-.list__item {
-    display: flex;
-    margin-right: 371px;
-    position: relative;
-    
-    &:not(:last-child) {
-        margin-right: 46px;
-    }
-}
-.list__link {
-    text-decoration: none;
-    color: #000;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.17;
-    letter-spacing: .02em;
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-    /*podkreślenie bieżącej strony*/
-    
-    &--active::after {
-        content: "";
-        display: block;
-        width: 100%;
-        border-top: 4px solid #2196F3;
-        border-radius: 2px;
-        position: relative;
-        top: 30px;
-        background: #2196F3;
-        margin-bottom: -6px;
-        }
-}  
-.header-contacts {
+.contact {
     display: flex;
     justify-content: center;
     align-items: center;
-
-    &:not(:last-child) {
-        margin-right: 30px;
-    }
+    margin: 0;
+    padding: 0;
 
     &:hover,
     &:focus {
         fill: currentColor;
     }
-}
-.contact-link {
-    text-decoration: none;
-    font-size: 14px;
-    color: var(--link-color);
-    padding: 33px 0 31px;
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-    &:hover,
-    &:focus {
-        color: var(--logo-color);
+    &__item {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+            
+        &:not(:last-child) {
+            margin-right: 30px;
+        }   
     }
-}
 
-.contact-link__icon {
-    margin-right: 10px;
-    fill: currentColor;
-}
+    &__link {
+        text-decoration: none;
+        font-size: 14px;
+        color: var(--link-color);
+        padding: 33px 0 31px;
+        transition-property: color;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        fill: currentColor;
 
+        &:hover,
+        &:focus {
+            color: var(--logo-color);
+        }
+    }
+
+    &__icon {
+        margin-right: 10px;
+        fill: currentColor;
+}
+}
