--- a/sass/layout/_list-client.scss
+++ b/sass/layout/_list-client.scss
@@ -1,19 +1,11 @@
-.list-client-items {
-    list-style-type: none;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 94px;
-
-}
-.clients h2 {
-    align-items: center;
+.clients {
     padding-top: 94px;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 42px;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: #212121;
 
+    &__list {
+            list-style-type: none;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 94px;
+        }
 }
